--- a/app/src/main/res/layout-small/activity_add_goal.xml
+++ b/app/src/main/res/layout-small/activity_add_goal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".AddGoalActivity"
     android:background="@color/black">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,9 +19,10 @@
             android:layout_height="match_parent">
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@id/containerForWhatForYourGoal">
+                android:id="@+id/containerForTheFirstPart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -36,7 +38,7 @@
                         android:textColor="#C4C4C4"
                         android:textStyle="bold"
                         android:layout_centerHorizontal="true"
-                        android:textSize="30dp"
+                        android:textSize="20dp"
                         />
 
                     <EditText
@@ -60,7 +62,6 @@
                     android:id="@+id/containerForCost"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15dp"
                     android:layout_below="@id/containerForNameOfGoal"
                     >
                     <TextView
@@ -71,7 +72,7 @@
                         android:textColor="#C4C4C4"
                         android:textStyle="bold"
                         android:layout_centerHorizontal="true"
-                        android:textSize="30dp"
+                        android:textSize="20dp"
                         />
 
 
@@ -91,11 +92,13 @@
                         android:id="@+id/currencyOfCostInAddGoal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginTop="35dp"
+                        android:layout_toRightOf="@id/txtCostOfGoal"
+                        android:layout_alignBottom="@id/txtCostOfGoal"
+                        android:layout_marginLeft="-30dp"
+                        android:text="p"
                         android:textColor="@color/black"
-                        android:textSize="29dp"
-                        android:layout_marginRight="70dp"/>
+                        android:textSize="20dp"
+                        />
 
 
                 </RelativeLayout>
@@ -108,8 +111,7 @@
                 android:id="@+id/containerForWhatForYourGoal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:layout_centerInParent="true"
+                android:layout_below="@id/containerForTheFirstPart"
 
                 >
 
@@ -123,13 +125,13 @@
                     android:textColor="#C4C4C4"
                     android:textStyle="bold"
                     android:layout_centerHorizontal="true"
-                    android:textSize="30dp"
+                    android:textSize="20dp"
                     />
 
                 <EditText
                     android:id="@+id/txtWhatForYouNeedGoal"
-                    android:layout_width="310dp"
-                    android:layout_height="130dp"
+                    android:layout_width="410dp"
+                    android:layout_height="90dp"
                     android:layout_centerHorizontal="true"
                     android:gravity="top"
                     android:paddingTop="10dp"
@@ -137,19 +139,18 @@
                     android:maxLength="120"
                     android:layout_marginTop="50dp"
 
-
                     android:background="@drawable/body_for_edit_text"/>
                 <TextView
                     android:id="@+id/counterOfTextInputAddGoal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_alignParentRight="true"
+                    android:layout_toRightOf="@id/txtWhatForYouNeedGoal"
                     android:text="0/120"
                     android:textSize="17dp"
                     android:layout_alignBottom="@id/txtWhatForYouNeedGoal"
 
-                    android:layout_marginRight="60dp"
+                    android:layout_marginLeft="-65dp"
                     android:layout_marginBottom="5dp"
                     />
             </RelativeLayout>
@@ -158,11 +159,10 @@
                 android:id="@+id/containerForChoiceOfImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="15dp"
                 android:layout_below="@id/containerForWhatForYourGoal"
-                android:layout_above="@id/containerForAddGoalBtn"
+                android:padding="20dp"
                 >
-            <androidx.appcompat.widget.AppCompatButton
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/addPictureOfGoal"
                     android:layout_width="500dp"
                     android:layout_height="wrap_content"
@@ -170,10 +170,10 @@
                     android:layout_centerInParent="true"
                     android:backgroundTint="@color/white"
                     android:text="Выбрать фото цели"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:onClick="chooseImageClicked"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:onClick="chooseImageClicked"
                     android:textAllCaps="false"
-                    android:textSize="20dp"
+                    android:textSize="10dp"
                     />
 
             </RelativeLayout>
@@ -182,11 +182,12 @@
                 android:id="@+id/containerForAddGoalBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="15dp"
-
+                android:padding="10dp"
+                android:layout_below="@id/containerForChoiceOfImage"
                 android:layout_alignParentBottom="true">
                 <ImageButton
                     android:id="@+id/addGoalBtn"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/black"
@@ -198,16 +199,11 @@
 
                     />
             </RelativeLayout>
+
         </RelativeLayout>
-
-
-
-
-
-
-
 
     </LinearLayout>
 
 
-</RelativeLayout>
+
+</ScrollView>
