--- a/app/src/main/res/layout-small/activity_sign_in.xml
+++ b/app/src/main/res/layout-small/activity_sign_in.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,117 +9,120 @@
     tools:context=".SignInActivity">
 
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-
-        <RelativeLayout
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:layout_marginTop="200dp">
-            <EditText
-                android:id="@+id/editTextLogin"
-                android:layout_width="321dp"
-                android:layout_height="53dp"
-                android:maxLength="20"
-                android:layout_centerHorizontal="true"
-
-
-                android:background="@drawable/body_for_edit_text"
-                android:hint="@string/string_login"
-                android:inputType="textPersonName"
-                android:paddingLeft="20dp"
-                android:textSize="30dp" />
-
-
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp">
-            <EditText
-                android:id="@+id/editTextPassword"
-                android:layout_width="321dp"
-                android:layout_height="53dp"
-
-                android:layout_centerHorizontal="true"
-                android:maxLength="16"
-
-                android:background="@drawable/body_for_edit_text"
-                android:hint="@string/string_passwd"
-                android:inputType="textPassword"
-                android:paddingLeft="20dp"
-                android:textSize="30dp" />
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp">
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buttonEnter"
-                android:layout_width="274dp"
-                android:layout_height="29dp"
-                android:foreground="?android:attr/selectableItemBackground"
-
-                android:layout_centerHorizontal="true"
-                android:textAllCaps="false"
-                android:gravity="center"
-                android:fontFamily="sans-serif-condensed"
-                android:background="@drawable/body_for_btn_enter_sign_in"
-                android:onClick="onClick"
-                android:textSize="20dp"
-                android:text="@string/enter_btn" />
-        </RelativeLayout>
-
-
-
-
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             >
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"
-                android:paddingBottom="80dp"
-                android:hint="@string/first_time_in_pj"
-                android:linksClickable="true"
-                android:textColorHint="@color/forTheFirstTimeInPennyJoy" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buttonToSignUp"
-                android:layout_width="274dp"
-                android:layout_height="29dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/body_for_btn_registration_sign_in"
-                android:gravity="center"
-                android:onClick="onClick"
-                android:text="@string/sign_up_btn"
-                android:textAllCaps="false"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:textColor="@color/white"
-                android:textSize="17dp"
-
-                />
-        </RelativeLayout>
+                android:padding="20dp"
+                android:layout_marginTop="200dp">
+                <EditText
+                    android:id="@+id/editTextLogin"
+                    android:layout_width="321dp"
+                    android:layout_height="53dp"
+                    android:maxLength="20"
+                    android:layout_centerHorizontal="true"
 
 
-    </LinearLayout>
+                    android:background="@drawable/body_for_edit_text"
+                    android:hint="@string/string_login"
+                    android:inputType="textPersonName"
+                    android:paddingLeft="20dp"
+                    android:textSize="20dp" />
+
+
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp">
+                <EditText
+                    android:id="@+id/editTextPassword"
+                    android:layout_width="321dp"
+                    android:layout_height="53dp"
+
+                    android:layout_centerHorizontal="true"
+                    android:maxLength="16"
+                    android:background="@drawable/body_for_edit_text"
+                    android:hint="@string/string_passwd"
+                    android:inputType="textPassword"
+                    android:paddingLeft="20dp"
+                    android:textSize="20dp" />
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp">
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/buttonEnter"
+                    android:layout_width="274dp"
+                    android:layout_height="29dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+
+                    android:layout_centerHorizontal="true"
+                    android:textAllCaps="false"
+                    android:gravity="center"
+                    android:fontFamily="sans-serif-condensed"
+                    android:background="@drawable/body_for_btn_enter_sign_in"
+                    android:onClick="onClick"
+                    android:textSize="10dp"
+                    android:text="@string/enter_btn" />
+            </RelativeLayout>
+
+
+
+
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                >
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentBottom="true"
+                    android:paddingBottom="80dp"
+                    android:hint="@string/first_time_in_pj"
+                    android:linksClickable="true"
+                    android:textColorHint="@color/forTheFirstTimeInPennyJoy" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/buttonToSignUp"
+                    android:layout_width="274dp"
+                    android:layout_height="29dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/body_for_btn_registration_sign_in"
+                    android:gravity="center"
+                    android:onClick="onClick"
+                    android:text="@string/sign_up_btn"
+                    android:textAllCaps="false"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:textColor="@color/white"
+                    android:textSize="10dp"
+
+                    />
+            </RelativeLayout>
+
+
+        </LinearLayout>
+    </ScrollView>
     <ProgressBar
         android:id="@+id/progressBarInSignIn"
         android:layout_width="wrap_content"
