--- a/app/src/main/res/layout-small/activity_sign_up_no_acc1.xml
+++ b/app/src/main/res/layout-small/activity_sign_up_no_acc1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_height="46dp"
             android:layout_centerHorizontal="true"
             android:onClick="nextLog1"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="400dp"
             android:textAllCaps="false"
             android:text="@string/string_next_for_btn"
             android:textSize="20dp"
@@ -32,7 +32,7 @@
             android:inputType="textPersonName"
             android:hint="@string/string_name_for_signupnoacc1"
             android:background="@drawable/body_for_edit_text"
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:layout_marginBottom="-130dp"
             android:layout_above="@id/txtSurname"
             android:paddingLeft="20dp"/>
@@ -46,8 +46,8 @@
             android:layout_marginTop="50dp"
             android:inputType="textPersonName"
             android:hint="@string/string_surname_for_sign_up_noacc1"
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:background="@drawable/body_for_edit_text"
             android:paddingLeft="20dp"/>
     </RelativeLayout>
-</RelativeLayout>
+</ScrollView>
