--- a/app/src/main/res/layout-small/activity_sign_up_no_acc2.xml
+++ b/app/src/main/res/layout-small/activity_sign_up_no_acc2.xml
@@ -7,89 +7,93 @@
     tools:context=".SignUpActivityNoAcc2"
     android:background="@color/black">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true">
-
-        <RelativeLayout
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="30dp"
-            >
+            android:orientation="vertical"
+            android:layout_centerInParent="true">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="30dp"
+                >
 
 
-            <EditText
-                android:id="@+id/txtLogin"
-                android:layout_width="321dp"
-                android:layout_height="53dp"
-                android:layout_centerInParent="true"
-                android:background="@drawable/body_for_edit_text"
-                android:hint="@string/string_login"
-                android:maxLength="20"
-                android:inputType="textPersonName"
-                android:paddingLeft="20dp"
-                android:textSize="30dp" />
-        </RelativeLayout>
+                <EditText
+                    android:id="@+id/txtLogin"
+                    android:layout_width="321dp"
+                    android:layout_height="53dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/body_for_edit_text"
+                    android:hint="@string/string_login"
+                    android:maxLength="20"
+                    android:inputType="textPersonName"
+                    android:paddingLeft="20dp"
+                    android:textSize="20dp" />
+            </RelativeLayout>
 
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="30dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="30dp">
 
-            <EditText
-                android:id="@+id/txtPasswd"
-                android:layout_width="321dp"
-                android:layout_height="53dp"
-                android:layout_centerInParent="true"
-                android:textSize="30dp"
-                android:paddingLeft="20dp"
-                android:maxLength="16"
-                android:inputType="textPassword"
-                android:hint="@string/string_passwd"
-                android:background="@drawable/body_for_edit_text"/>
-        </RelativeLayout>
+                <EditText
+                    android:id="@+id/txtPasswd"
+                    android:layout_width="321dp"
+                    android:layout_height="53dp"
+                    android:layout_centerInParent="true"
+                    android:textSize="20dp"
+                    android:paddingLeft="20dp"
+                    android:maxLength="16"
+                    android:inputType="textPassword"
+                    android:hint="@string/string_passwd"
+                    android:background="@drawable/body_for_edit_text"/>
+            </RelativeLayout>
 
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="30dp">
-            <EditText
-                android:id="@+id/txtRepeatPasswd"
-                android:layout_width="321dp"
-                android:layout_height="53dp"
-                android:layout_centerInParent="true"
-                android:inputType="textPassword"
-                android:hint="@string/string_repeat_passwd"
-                android:textSize="30dp"
-                android:maxLength="16"
-                android:paddingLeft="20dp"
-                android:background="@drawable/body_for_edit_text"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="30dp">
+                <EditText
+                    android:id="@+id/txtRepeatPasswd"
+                    android:layout_width="321dp"
+                    android:layout_height="53dp"
+                    android:layout_centerInParent="true"
+                    android:inputType="textPassword"
+                    android:hint="@string/string_repeat_passwd"
+                    android:textSize="10dp"
+                    android:maxLength="16"
+                    android:paddingLeft="20dp"
+                    android:background="@drawable/body_for_edit_text"/>
 
-        </RelativeLayout>
+            </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="30dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="30dp">
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnNextSecond"
-                android:layout_width="287dp"
-                android:layout_height="46dp"
-                android:layout_centerInParent="true"
-                android:background="@drawable/body_for_btn_radius_13_dp_sign_in"
-                android:onClick="nextLog2"
-                android:text="@string/string_next_for_btn"
-                android:textAllCaps="false"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:textSize="20dp" />
-        </RelativeLayout>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnNextSecond"
+                    android:layout_width="287dp"
+                    android:layout_height="46dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/body_for_btn_radius_13_dp_sign_in"
+                    android:onClick="nextLog2"
+                    android:text="@string/string_next_for_btn"
+                    android:textAllCaps="false"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:textSize="20dp" />
+            </RelativeLayout>
 
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <ProgressBar
         android:id="@+id/progressBarInSignUpNoAcc2"
