--- a/app/src/main/res/layout-small/aler_dialog_in_main_tamplate.xml
+++ b/app/src/main/res/layout-small/aler_dialog_in_main_tamplate.xml
@@ -15,7 +15,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="306dp"
-            android:layout_height="333dp"
+            android:layout_height="270dp"
             app:cardCornerRadius="20dp"
             android:layout_centerInParent="true">
             <!-- в паддинге не уверен -->
@@ -48,7 +48,7 @@
                             android:textStyle="bold"
                             android:gravity="center"
                             android:layout_centerHorizontal="true"
-                            android:textSize="40dp"/>
+                            android:textSize="30dp"/>
 
                         <TextView
                             android:id="@+id/lblMainInfAboutEndOfMonth"
@@ -58,7 +58,7 @@
                             android:layout_height="wrap_content"
                             android:text="В прошлом месяце вы не плохо потрудились. Так держать!"
                             android:gravity="center"
-                            android:textSize="33dp"
+                            android:textSize="23dp"
                             android:layout_centerHorizontal="true"
                             android:layout_below="@id/lblEndOfMonth"/>
 
@@ -73,7 +73,7 @@
                             android:layout_centerHorizontal="true"
                             android:textColor="@color/black"
                             android:layout_below="@id/lblMainInfAboutEndOfMonth"
-                            android:textSize="33dp"/>
+                            android:textSize="23dp"/>
 
 
                         <TextView
@@ -85,7 +85,7 @@
                             android:gravity="left"
                             android:layout_marginLeft="10dp"
                             android:layout_below="@+id/lblTop4"
-                            android:textSize="25dp"/>
+                            android:textSize="15dp"/>
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btnCloseAD"
@@ -95,7 +95,7 @@
                             android:text="Хорошо"
                             android:textAllCaps="false"
                             android:layout_centerInParent="true"
-                            android:textSize="25dp"
+                            android:textSize="15dp"
                             android:layout_below="@id/lblTop4CategoriesInMonth"
                             android:layout_marginTop="25dp"
                             android:layout_marginBottom="10dp"
@@ -109,16 +109,16 @@
 
 
         </androidx.cardview.widget.CardView>
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/image_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="2dp"
-        android:background="@drawable/iconok"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@id/cardView"
-        android:layout_marginBottom="-30dp"
-        />
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/image_ok"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:elevation="2dp"
+            android:background="@drawable/iconok"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@id/cardView"
+            android:layout_marginBottom="-30dp"
+            />
 
     </RelativeLayout>
 </RelativeLayout>
