--- a/app/src/main/res/layout-small/alert_dialog_result.xml
+++ b/app/src/main/res/layout-small/alert_dialog_result.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:background="#00000000">
 
         <FrameLayout
@@ -17,49 +17,49 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="55dp" >
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardViewOfResult"
-            android:layout_width="335dp"
-            android:layout_height="268dp"
-            app:cardCornerRadius="20dp"
-            android:layout_marginTop="0dp"
-            android:background="@drawable/background_for_essay"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:paddingBottom="-50dp" >
-            <!-- в паддинге не уверен -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewOfResult"
+                android:layout_width="155dp"
+                android:layout_height="268dp"
+                app:cardCornerRadius="20dp"
+                android:layout_marginTop="0dp"
+                android:background="@drawable/background_for_essay"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingBottom="-50dp" >
+                <!-- в паддинге не уверен -->
 
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
-                >
-
-
-                <TextView
-                    android:id="@+id/lblResult"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Данный товар вам дейтсвительно нужен. Смело берите!"
-                    android:gravity="center"
-                    android:textSize="36dp"
-                    android:textColor="@color/black"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
                     android:layout_centerInParent="true"
-                    />
+                    >
+
+
+                    <TextView
+                        android:id="@+id/lblResult"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Данный товар вам дейтсвительно нужен. Смело берите!"
+                        android:gravity="center"
+                        android:textSize="26dp"
+                        android:textColor="@color/black"
+                        android:layout_centerInParent="true"
+                        />
 
 
 
 
-            </RelativeLayout>
+                </RelativeLayout>
 
-        </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
 
-    </FrameLayout>
+        </FrameLayout>
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/image_of_result"
             android:layout_width="wrap_content"
@@ -70,4 +70,4 @@
             />
     </FrameLayout>
 
-</FrameLayout>
+</ScrollView>
