--- a/app/src/main/res/layout-small/fragment_helper.xml
+++ b/app/src/main/res/layout-small/fragment_helper.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         >
         <RelativeLayout
+            android:id="@+id/containerForLblTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp">
@@ -20,19 +21,20 @@
                 android:layout_alignParentTop="true"
                 android:text="Чтобы получить совет ответьте на пару вопросов"
                 android:textColor="@color/white"
-                android:textSize="30dp"
+                android:textSize="14dp"
                 android:gravity="center"
                 />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:layout_centerInParent="true">
+            android:padding="5dp"
+            android:layout_centerInParent="true"
+            android:layout_below="@id/containerForLblTitle">
             <ImageView
                 android:id="@+id/arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:src="@drawable/arrow"
                 android:layout_centerInParent="true"
                 />
