--- a/app/src/main/res/layout/fragment_add_good.xml
+++ b/app/src/main/res/layout/fragment_add_good.xml
@@ -8,12 +8,12 @@
     android:background="@color/black">
  <ScrollView
      android:layout_width="match_parent"
-     android:layout_height="match_parent">
+     android:layout_height="wrap_content"
+     android:layout_centerInParent="true">
 
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_gravity="bottom"
       android:orientation="vertical">
 
    <RelativeLayout
