--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -8,7 +8,10 @@
     android:background="@color/black"
     tools:context=".ChartsActivity">
 
-
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/linear"
@@ -166,20 +169,24 @@
 
                         </RelativeLayout>
 
+
                     </LinearLayout>
 
                 </RelativeLayout>
+
             </androidx.appcompat.widget.LinearLayoutCompat>
 
 
+    </ScrollView>
 
     <ListView
-    android:dividerHeight="10dp"
-    android:id="@+id/listViewOfLegend"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@id/linear"
-    />
+        android:dividerHeight="10dp"
+        android:id="@+id/listViewOfLegend"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/scroll"
+        />
+
     <ProgressBar
         android:id="@+id/progressBarInCharts"
         android:layout_width="wrap_content"
