--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -183,7 +183,7 @@
         android:dividerHeight="10dp"
         android:id="@+id/listViewOfLegend"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/scroll"
         />
 
