--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -10,8 +10,9 @@
 
     <ScrollView
         android:id="@+id/scroll"
+        android:fillViewport="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/linear"
@@ -173,19 +174,20 @@
                     </LinearLayout>
 
                 </RelativeLayout>
-
+                <ListView
+                    android:dividerHeight="10dp"
+                    android:id="@+id/listViewOfLegend"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:layout_below="@id/containerForTable"
+                    />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     </ScrollView>
 
-    <ListView
-        android:dividerHeight="10dp"
-        android:id="@+id/listViewOfLegend"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/scroll"
-        />
+
 
     <ProgressBar
         android:id="@+id/progressBarInCharts"
