--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -8,11 +8,12 @@
     android:background="@color/black"
     tools:context=".ChartsActivity">
 
+
     <ScrollView
-        android:id="@+id/scroll"
-        android:fillViewport="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/scroll"
+        android:fillViewport="true">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/linear"
@@ -177,9 +178,8 @@
                 <ListView
                     android:dividerHeight="10dp"
                     android:id="@+id/listViewOfLegend"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_below="@id/containerForTable"
                     />
             </androidx.appcompat.widget.LinearLayoutCompat>
